add update product routes
